<resources>
    <string name="app_name">e-Log Management System</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="submit">Save</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="date">Date</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="home">Home</string>
    <string name="chiller">Chiller</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="sync">Sync</string>
    <string name="cancel">Cancel</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="choose_shift">Choose Shift</string>
    <string name="entry_date">Entry Date</string>
    <string name="select_value">Select Value</string>
    <string name="parameter_name">Parameter Name</string>
    <string name="upper_value">Upper Value</string>
    <string name="lower_value">Lower value</string>
    <string name="range">Range</string>
    <string name="enter_value">Enter value</string>
    <string name="template_list">Chillier</string>
    <string name="template_1">Tower Sol Change Over Data</string>
    <string name="tempale_2">Per Shift Caustic Add Data  </string>
    <string name="template_3">Template 3</string>
    <string name="fill_parameter">Fill Parameter</string>
    <string name="remain_parameter_today_10_0">Remain Parameter today 10/0</string>
    <string name="user_name">User Name</string>
    <string name="template_name">Template Name</string>
    <string name="section_name">Section Name</string>
    <string name="parameter_value">Parameter Value</string>
    <string name="elogbook_management_system">Elogbook Management System</string>
    <string name="add">Proceed</string>
    <string name="enter_licenseid">Enter LicenseID</string>
</resources>