<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_parent"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:clickable="true"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/icon_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp">

                <ImageView
                    android:id="@+id/im_circle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:padding="5dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/im_index"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@android:color/black" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_parentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/icon_container"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/nunitonans_regular"

                android:layout_toEndOf="@id/icon_container"
                android:textSize="14sp"

                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_parentName"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/icon_container"
                android:layout_marginTop="5dp"
                android:text="sun"
                android:fontFamily="@font/nunitosans_light"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/im_arrowup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/im_downarrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"

                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_child_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <View
                android:id="@+id/UnderLine1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"

                android:background="@color/light" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"

                android:weightSum="8">

                <TextView
                    android:id="@+id/tv_parameter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="2.0"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textAlignment="center"
                    android:fontFamily="@font/nunitonans_regular"
                    android:text="@string/parameter_name"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_upervalue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/upper_value"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:fontFamily="@font/nunitonans_regular"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_lower"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/lower_value"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:fontFamily="@font/nunitonans_regular"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_range"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/range"
                    android:textStyle="bold"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:fontFamily="@font/nunitonans_regular"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_entervalue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.0"
                    android:text="@string/enter_value"
                    android:fontFamily="@font/nunitonans_regular"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="12sp"
                    android:textColor="@color/black" />
            </LinearLayout>
            <View
                android:id="@+id/UnderLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/light" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:overScrollMode="never" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>