<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                layout="@layout/app_bar_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:background="@color/light">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:background="@color/light">

                    <LinearLayout
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:tools="http://schemas.android.com/tools"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/liner_layout"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:weightSum="10">


                        <TextView
                            android:id="@+id/im_index"
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:layout_weight="1.0"
                            android:padding="5dp"
                            android:paddingStart="5dp"
                            android:textColor="@color/white"
                            android:text="Sr No"
                            android:background="@drawable/table_header_cell_bg"
                            android:fontFamily="@font/nunitonans_regular"
                            android:textAlignment="center"
                            android:textSize="12sp"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:id="@+id/tv_template"
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:layout_weight="3.0"
                            android:text="@string/template_name"
                            android:padding="5dp"
                            android:textColor="@color/white"
                            android:background="@drawable/table_header_cell_bg"
                            android:fontFamily="@font/nunitonans_regular"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            />

                        <TextView
                            android:id="@+id/tv_section"
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:layout_weight="2.0"
                            android:padding="5dp"
                            android:textColor="@color/white"
                            android:paddingStart="5dp"
                            android:text="@string/section_name"
                            android:background="@drawable/table_header_cell_bg"
                            android:fontFamily="@font/nunitonans_regular"
                            android:textAlignment="center"
                            android:textSize="12sp"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:id="@+id/tv_parameter"
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:layout_weight="2.0"
                            android:text="@string/parameter_name"
                            android:padding="5dp"
                            android:textColor="@color/white"
                            android:background="@drawable/table_header_cell_bg"
                            android:fontFamily="@font/nunitonans_regular"
                            android:textAlignment="center"
                            android:textSize="12sp"
                            />

                        <TextView
                            android:id="@+id/tv_value"
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:layout_weight="2.0"
                            android:text="@string/parameter_value"
                            android:padding="5dp"
                            android:textColor="@color/white"
                            android:background="@drawable/table_header_cell_bg"
                            android:fontFamily="@font/nunitonans_regular"
                            android:textAlignment="center"
                            android:textSize="12sp"
                            />


                    </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/liner_layout"
                        android:layout_marginStart="2dp"

                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="5dp"
                        android:groupIndicator="@null"
                        android:scrollbars="vertical"
                        tools:ignore="MissingConstraints" />


                </RelativeLayout>

            </RelativeLayout>

        </RelativeLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <RelativeLayout
        android:id="@+id/drawerPane"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <include
            layout="@layout/app_sidebar_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </include>
    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>
