<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                layout="@layout/app_bar_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:background="@color/white">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="50dp"
                    android:background="@color/white">


                    <RelativeLayout
                        android:id="@+id/rl_date_shift"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/qqet_date"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="15dp"
                            app:startIconDrawable="@drawable/im_calendar"
                            tools:ignore="TooDeepLayout">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_date"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:focusable="false"
                                android:fontFamily="@font/nunitonans_regular"
                                android:hint="@string/entry_date"
                                android:textAlignment="center" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/cpdTypeLayout"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@id/qqet_date"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="10dp"
                            android:visibility="gone"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="RelativeOverlap">

                            <AutoCompleteTextView
                                android:id="@+id/cpdType"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:inputType="none"
                                android:text="@string/choose_shift"
                                android:textColor="@color/purple_500"
                                tools:ignore="LabelFor" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </RelativeLayout>


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/rl_date_shift"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="10dp"
                        android:groupIndicator="@null"
                        android:scrollbars="vertical"
                        tools:ignore="MissingConstraints" />


                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/rl_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/bt_sumit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/rounded_rectangle"
                        android:backgroundTint="#556ee6"
                        android:fontFamily="@font/nunitonans_regular"
                        android:text="@string/submit"
                        android:textColor="@color/white" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/bt_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginEnd="15dp"
                        android:layout_marginStart="15dp"
                        android:background="@drawable/rounded_rectangle"
                        android:fontFamily="@font/nunitonans_regular"
                        android:text="@string/cancel"
                        android:textColor="@color/white"
                        tools:ignore="RelativeOverlap" />
                </RelativeLayout>
            </RelativeLayout>

        </RelativeLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <RelativeLayout
        android:id="@+id/drawerPane"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <include
            layout="@layout/app_sidebar_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </include>
    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>
